--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,11 @@ dependencies:
   flutter:
     sdk: flutter
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  vibration: ^1.9.0 
+  qr_code_scanner: ^1.0.1
+  path_provider: ^2.0.2
+  audioplayers: ^0.20.1
+  flutter_local_notifications: ^9.2.0
 
 dev_dependencies:
   flutter_test:
@@ -46,7 +47,6 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
