--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  vibration: ^1.9.0 
-  qr_code_scanner: ^1.0.1
   path_provider: ^2.0.2
+  vibration: ^1.9.0
+  qr_code_scanner: ^1.0.1
   audioplayers: ^0.20.1
   flutter_local_notifications: ^9.2.0
+  android_alarm_manager_plus: ^2.0.0
+
 
 dev_dependencies:
   flutter_test:
