--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,8 +3,6 @@
 
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
     <uses-permission android:name="android.permission.VIBRATE"/>
-    <uses-permission android:name="android.permission.WAKE_LOCK"/>
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 
     <application
         android:label="flutter_application_1"
@@ -26,18 +24,16 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <receiver
-            android:name="com.dexterous.flutterlocalnotifications.FlutterLocalNotificationsPlugin$AlarmBroadcastReceiver"
-            android:exported="true"/>
-        <receiver
-            android:name="com.dexterous.flutterlocalnotifications.FlutterLocalNotificationsPlugin$NotificationBroadcastReceiver"
-            android:exported="true"
-            android:permission="android.permission.RECEIVE_BOOT_COMPLETED">
+        <receiver android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationReceiver"/>
+        <receiver android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationBootReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
                 <action android:name="android.intent.action.MY_PACKAGE_REPLACED"/>
             </intent-filter>
         </receiver>
+        
+        <meta-data android:name="com.dexterous.flutterlocalnotifications.default_icon" android:resource="@drawable/ic_launcher"/>
+    
         <service
             android:name="com.dexterous.flutterlocalnotifications.FlutterLocalNotificationsPlugin$IntentService"
             android:permission="android.permission.BIND_JOB_SERVICE"
